# laptop-provisioning

./: .gitignore  Pipfile  README.md  ansible.cfg  localhost.yml  makefile  pyproject.toml  requirements.txt  requirements.yml
group_vars/: all.yml
host_vars/: main.yml
inventories/: dev.ini
roles/configure_android/meta/: main.yml
roles/configure_android/tasks/: main.yml
roles/configure_aws/meta/: main.yml
roles/configure_aws/tasks/: main.yml
roles/configure_browser/meta/: main.yml
roles/configure_browser/tasks/: brave.yml  firefox.yml  main.yml
roles/configure_code_ide/handlers/: main.yml
roles/configure_code_ide/meta/: main.yml
roles/configure_code_ide/tasks/: main.yml  vim.yml
roles/configure_container/meta/: main.yml
roles/configure_container/tasks/: docker-compose.yml  docker.yml  main.yml  podman.yml
roles/configure_container/vars/: main.yml
roles/configure_desktop/meta/: main.yml
roles/configure_desktop/tasks/: main.yml  signal.yml  ulauncher.yml
roles/configure_dotfiles/meta/: main.yml
roles/configure_dotfiles/tasks/: main.yml
roles/configure_essential/meta/: main.yml
roles/configure_essential/tasks/: main.yml
roles/configure_git/meta/: main.yml
roles/configure_git/tasks/: delta.yml  gitlab.yml  main.yml
roles/configure_infra_management/files/: kube-config
roles/configure_infra_management/tasks/: k8s.yml  main.yml  terraform.yml  testkube.yml
roles/configure_nodejs/meta/: main.yml
roles/configure_nodejs/tasks/: main.yml  pnpm.yml  volta.yml
roles/configure_nodejs/vars/: main.yml
(+28 files in other folders)
