[tool.poetry]
name = "laptop-provisioning"
version = "0.1.0"
description = "Restore Laptop with Ansible"
authors = ["Edouard Lopez <contact@edouard-lopez.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.9.0"

[tool.poetry.dev-dependencies]
molecule = "^3.6.1"
ansible-lint = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
